Integration tests added
