# internal/pkg/delivery/gin/controller/show_available_accounts.go
@@ -2,13 +2,13 @@ package controller
 
 import (
 	"context"
-	"github.com/screwyprof/payment/internal/pkg/delivery/gin/response"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 
 	"github.com/screwyprof/payment/internal/pkg/cqrs"
-	"github.com/screwyprof/payment/internal/pkg/delivery/gin/responder"
+	"github.com/screwyprof/payment/internal/pkg/delivery/gin/response"
+
 	"github.com/screwyprof/payment/pkg/query"
 	"github.com/screwyprof/payment/pkg/report"
 )
@@ -30,15 +30,15 @@ func NewShowAvailableAccounts(queryBus cqrs.QueryHandler) *ShowAvailableAccounts
 // @Accept  json
 // @Produce  json
 // @Success 200 {array} response.AvailableAccount
-// @Failure 400 {object} responder.HTTPError
-// @Failure 404 {object} responder.HTTPError
-// @Failure 500 {object} responder.HTTPError
+// @Failure 400 {object} response.HTTPError
+// @Failure 404 {object} response.HTTPError
+// @Failure 500 {object} response.HTTPError
 // @Router /accounts [get]
 func (h *ShowAvailableAccounts) Handle(ctx *gin.Context) {
 	accs := report.Accounts{}
 	err := h.queryBus.Handle(context.Background(), query.GetAllAccounts{}, &accs)
 	if err != nil {
-		responder.NewError(ctx, http.StatusNotFound, err)
+		response.NewError(ctx, http.StatusNotFound, err)
 		return
 	}
 
