# internal/pkg/delivery/gin/controller/transfer_money.go
@@ -11,7 +11,8 @@ import (
 	"github.com/screwyprof/payment/internal/pkg/cqrs"
 
 	"github.com/screwyprof/payment/internal/pkg/delivery/gin/request"
-	"github.com/screwyprof/payment/internal/pkg/delivery/gin/responder"
+	"github.com/screwyprof/payment/internal/pkg/delivery/gin/response"
+
 	"github.com/screwyprof/payment/pkg/command"
 	"github.com/screwyprof/payment/pkg/domain/account"
 )
@@ -38,21 +39,21 @@ func NewTransferMoney(commandBus cqrs.CommandHandler, queryBus cqrs.QueryHandler
 // @Produce  json
 // @Param number path string true "account number"
 // @Param transfer body request.TransferMoney true "Transfer money"
-// @Success 200 {object} controller.Message
-// @Failure 400 {object} responder.HTTPError
-// @Failure 500 {object} responder.HTTPError
+// @Success 200 {object} response.Message
+// @Failure 400 {object} response.HTTPError
+// @Failure 500 {object} response.HTTPError
 // @Router /accounts/{number}/transfer [post]
 func (h *TransferMoney) Handle(ctx *gin.Context) {
 	from := ctx.Param("number")
 
 	var req request.TransferMoney
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		responder.NewError(ctx, http.StatusBadRequest, err)
+		response.NewError(ctx, http.StatusBadRequest, err)
 		return
 	}
 
 	//if err := req.Validate(); err != nil {
-	//	responder.NewError(ctx, http.StatusBadRequest, err)
+	//	response.NewError(ctx, http.StatusBadRequest, err)
 	//	return
 	//}
 
@@ -64,7 +65,7 @@ func (h *TransferMoney) Handle(ctx *gin.Context) {
 		Amount: amount,
 	})
 	if err != nil {
-		responder.NewError(ctx, http.StatusInternalServerError, err)
+		response.NewError(ctx, http.StatusInternalServerError, err)
 		return
 	}
 
@@ -74,10 +75,10 @@ func (h *TransferMoney) Handle(ctx *gin.Context) {
 		Amount: amount,
 	})
 	if err != nil {
-		responder.NewError(ctx, http.StatusInternalServerError, err)
+		response.NewError(ctx, http.StatusInternalServerError, err)
 		return
 	}
 
-	ctx.JSON(http.StatusOK, Message{
+	ctx.JSON(http.StatusOK, response.Message{
 		Message: fmt.Sprintf("%s transfered from %s to %s", amount.Display(), from, req.To)})
 }
